Revision history for Perl extension Catalyst::Model::DBIC::Schema

0.26  As yet unreleased
    - Fix missing dep on Catalyst::Helper that made tests fail (RT 47449)

0.25  Fri Jun 19 08:35:38 PDT 2009
	- fix dep on Tie::IxHash that made tests fail
	- add more attributes to ::Replicated trait
        - fixed infinte loop in helper if SQLite connect_info has only
	  a DSN (dandv, RT #47101)

0.24  Tue Jun 16 06:18:58 PDT 2009
        - Add tests for issues with Class::C3 which are caused to
          applications which use new Catalyst but old DBIC, and have
          use Class::C3 in the MyApp class (t0m)
        - die on empty schema
        - create=dynamic deprecation warning
        - helper passes loader opts to dynamic schemas
        - conversion to Moose
        - cursor caching support (via
          Catalyst::TraitFor::Model::DBIC::Schema::Caching)
        - ::Storage::Replicated support (via ::Replicated trait)
        - switch to hashref connect_info for DBIC 8100
        - better helper option parsing, with support for more options
        - more tests

0.23  Sun Mar  8 20:30:02 GMT 2009
        - Kill a couple of warnings (one due to MRO::Compat)

0.22  Tue Mar  3 15:54:19 UTC 2009
        - Fix oddly formatted error message.
        - Doc patch to clarify generated classes
        - Switch to use_namespaces and InflateColumn::DateTime for create=static
          by default, with backcompat
        - Switch to MRO::Compat from NEXT
        - Add support for extra Schema::Loader options such as db_schema and
          components

0.21  Fri Aug 22 00:26:05 UTC 2008
        - doc fix (RT #31848)
        - connection_info can be just the DSN instead of an arrayref

0.20  Wed May 23, 2007
        - Fix for rt.cpan.org #22426
        - Switch to Module::Install
        - Assorted small pod and cleanliness fixes
        - Some requirements bumped to the latest maint
          releases of the same major feature release

0.18  Tue Aug  8 04:34:42 UTC 2006